--- a/src/app/pages/heroes/heroes.component.html
+++ b/src/app/pages/heroes/heroes.component.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<table class="table mt-3 animated fadeIn faster">
+<table *ngIf="!cargando && heroes.length > 0" class="table mt-3 animated fadeIn faster">
     <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
@@ -32,7 +32,7 @@
                 <button class="btn btn-info mr-1" [routerLink]="['/heroe', heroe.id]">
                     <i class="fa fa-pen"></i>
                 </button>
-                <button class="btn btn-danger ">
+                <button class="btn btn-danger" (click)="borrarHeroe(heroe, i)">
                     <i class="fa fa-trash"></i>
                 </button>
             </td>
@@ -40,7 +40,7 @@
     </tbody>
 </table>
 
-<div class="alert alert-info text-center mt-3">
+<div *ngIf="cargando" class="alert alert-info text-center mt-3 animated fadeIn faster">
     <h4 class="alert-heading">Cargando</h4>
     <p>
         <i class="fa fa-sync-alt fa-spin fa-2x"></i>
@@ -48,7 +48,7 @@
     <p class="mb-0">Espere por favor</p>
 </div>
 
-<div class="alert alert-warning text-center mt-3">
+<div *ngIf="!cargando && heroes.length===0" class="alert alert-warning text-center mt-3 animated fadeIn faster">
     <h4 class="alert-heading">No hay Registros</h4>
     <p>
         <i class="fa fa-exclamation fa-2x"></i>
